--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="Sparse-Diffusion-Policy Project Page">
-  <meta property="og:title" content="Sparse-Diffusion-Policy"/>
+  <meta property="og:title" content="Sparse Diffusion Policy:  A Sparse, Reusable, and Flexible Policy for Robot Learning"/>
   <meta property="og:description" content="Multi-task and Continual Learning with Mixture-of-Experts"/>
   <meta property="og:url" content="anonymous"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
@@ -14,7 +14,7 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <meta name="twitter:title" content="Sparse-Diffusion-Policy">
+  <meta name="twitter:title" content="Sparse Diffusion Policy:  A Sparse, Reusable, and Flexible Policy for Robot Learning">
   <meta name="twitter:description" content="Multi-task and Continual Learning with Mixture-of-Experts">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Sparse-Diffusion-Policy</title>
+  <title>Sparse Diffusion Policy:  A Sparse, Reusable, and Flexible Policy for Robot Learning</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -122,7 +122,7 @@
   </div>
 </section>
 
-
+<!-- 
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -139,7 +139,7 @@
   </div>
 </section>
 <!-- End teaser video -->
-
+-->
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -148,7 +148,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+           The increasing complexity of tasks in robotics demands efficient strategies for multitask and continual learning. Traditional models typically rely on a universal policy for all tasks, facing challenges such as high computational costs and catastrophic forgetting when learning new tasks. To address these issues, we introduce a <b>sparse, reusable, and flexible</b> policy, Sparse Diffusion Policy (SDP). By adopting Mixture of Experts (MoE) within a transformer-based diffusion policy, SDP selectively activates experts and skills, enabling task-specific learning without retraining the entire model. It not only reduces the burden of active parameters but also facilitates the seamless integration and reuse of experts across various tasks. Extensive experiments on diverse tasks in both simulators and the real world show that SDP 1) excels in multitask scenarios with negligible increases in active parameters, 2) prevents forgetting in continual learning new tasks, and 3) enables efficient task transfer, offering a promising solution for advanced robotic applications. 
           </p>
         </div>
       </div>
@@ -258,7 +258,7 @@
 
 
 
-
+<!--
 <!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
@@ -272,8 +272,8 @@
     </div>
   </section>
 <!--End paper poster -->
-
-
+-->
+<!--
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
@@ -282,8 +282,8 @@
     </div>
 </section>
 <!--End BibTex citation -->
-
-
+-->
+<!--
   <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
@@ -301,7 +301,7 @@
     </div>
   </div>
 </footer>
-
+-->
 <!-- Statcounter tracking code -->
   
 <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
