--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   </div>
 </section>
 
-<!-- 
-<!-- Teaser video-->
+
+<!-- <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -138,8 +138,8 @@
     </div>
   </div>
 </section>
-<!-- End teaser video -->
--->
+<!-- End teaser video -->-->
+
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -158,7 +158,7 @@
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
+<!--<!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -195,12 +195,12 @@
 </div>
 </div>
 </section>
-<!-- End image carousel -->
+<!-- End image carousel -->-->
 
 
 
 
-<!-- Youtube video -->
+<!--<!-- Youtube video -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -218,10 +218,10 @@
     </div>
   </div>
 </section>
-<!-- End youtube video -->
+<!-- End youtube video -->-->
 
 
-<!-- Video carousel -->
+<!--<!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -252,14 +252,14 @@
     </div>
   </div>
 </section>
-<!-- End video carousel -->
+<!-- End video carousel -->-->
 
 
 
 
 
-<!--
-<!-- Paper poster -->
+
+<!--<!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -281,10 +281,10 @@
       <pre><code>BibTex Code Here</code></pre>
     </div>
 </section>
-<!--End BibTex citation -->
--->
-<!--
-  <footer class="footer">
+<!--End BibTex citation -->-->
+
+
+  <!--<footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -300,8 +300,8 @@
       </div>
     </div>
   </div>
-</footer>
--->
+</footer>-->
+
 <!-- Statcounter tracking code -->
   
 <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
