--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Sparse Diffusion Policy</h1>
+            <h1 class="title is-1 publication-title">Sparse Diffusion Policy:  A Sparse, Reusable, and Flexible Policy for Robot Learning</h1>
              <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
                <span class="author-block">
