--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
+        <source src="static/videos/overview_sdp.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        Multitask evaluation SDP on MimicGen.
       </h2>
     </div>
   </div>
@@ -156,6 +156,42 @@
   </div>
 </section>
 <!-- End paper abstract -->
+
+
+<!-- <!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/multitask-realrobot.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        Multitask evaluation SDP on the real robot.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->-->
+
+
+<!-- <!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/novel_refine.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        Novel experiments
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->-->
 
 
 <!--<!-- Image carousel -->
