--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>-->
                   </div> 
 
-                  <div class="column has-text-centered">
+                  <!-- <div class="column has-text-centered">
                     <div class="publication-links">
-                         <!-- Arxiv PDF link -->
-                      <span class="link-block">
+                         Arxiv PDF link -->
+                      <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
@@ -80,7 +80,7 @@
                         </span>
                         <span>Paper</span>
                       </a>
-                    </span>
+                    </span> --> 
 
                     <!-- Supplementary PDF link -->
                     <span class="link-block">
@@ -95,7 +95,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://anonymous.4open.science/r/SDP-14DC" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -123,7 +123,8 @@
 </section>
 
 
-<!-- <!-- Teaser video-->
+
+<!--  Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -138,7 +139,7 @@
     </div>
   </div>
 </section>
-<!-- End teaser video -->-->
+<!-- End teaser video -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -157,8 +158,20 @@
 </section>
 <!-- End paper abstract -->
 
-
-<!-- <!-- Teaser video-->
+<!-- New image section -->
+<section class="hero image-section">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img src="static/images/teaser.png" alt="Description of image" style="width: 100%; height: auto;">
+      <h2 class="subtitle has-text-centered">
+        Overview of Sparse Diffusion Policy (SDP).
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End new image section -->
+ 
+<!--  Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -173,10 +186,26 @@
     </div>
   </div>
 </section>
-<!-- End teaser video -->-->
+<!-- End teaser video -->
 
+<!--  Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/collapse.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        The failure case for the baseline model due to the lack of sparsity.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->
 
-<!-- <!-- Teaser video-->
+<!--  Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -186,43 +215,43 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Novel experiments
+        Novel experiments: we test the reusability of the SDP, highlighting its ability to transfer to new tasks while retaining accumulated old skills. 
       </h2>
     </div>
   </div>
 </section>
-<!-- End teaser video -->-->
+<!-- End teaser video -->
 
 
-<!--<!-- Image carousel -->
-<section class="hero is-small">
+<!-- Image carousel -->
+<!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        Your image here -->
+        <!-- <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           First image description.
         </h2>
       </div>
       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
+        Your image here -->
+        <!-- <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Second image description.
         </h2>
       </div>
-      <div class="item">
+      <div class="item"> -->
         <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
+        <!-- <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
          Third image description.
        </h2>
      </div>
-     <div class="item">
+     <div class="item"> -->
       <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
+      <!-- <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
       </h2>
@@ -230,73 +259,73 @@
   </div>
 </div>
 </div>
-</section>
-<!-- End image carousel -->-->
+</section> -->
+<!-- End image carousel -->
 
 
 
 
-<!--<!-- Youtube video -->
-<section class="hero is-small is-light">
+<!-- Youtube video -->
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
+       Paper video. -->
+      <!-- <h2 class="title is-3">Video Presentation</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           
           <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            Youtube embed code here -->
+            <!-- <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
-<!-- End youtube video -->-->
+</section>  -->
+<!-- End youtube video -->
 
 
-<!--<!-- Video carousel -->
-<section class="hero is-small">
+<!-- Video carousel -->
+<!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Another Carousel</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
+            Your video file here -->
+            <!-- <source src="static/videos/carousel1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
+            Your video file here -->
+            <!-- <source src="static/videos/carousel2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
           <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
+            Your video file here -->
+            <!-- <source src="static/videos/carousel3.mp4"
             type="video/mp4">
           </video>
         </div>
       </div>
     </div>
   </div>
-</section>
-<!-- End video carousel -->-->
+</section> -->
+<!-- End video carousel -->
 
 
 
 
 
 
-<!--<!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- Paper poster -->
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -306,18 +335,18 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
--->
+
 <!--
-<!--BibTex citation -->
+BibTex citation
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>BibTex Code Here</code></pre>
     </div>
 </section>
-<!--End BibTex citation -->-->
+End BibTex citation -->
 
 
   <!--<footer class="footer">
