[yixiao] refine web.

--- a/index.html
+++ b/index.html
@@ -129,15 +129,6 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/overview_sdp.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Multitask evaluation SDP on MimicGen.
-      </h2>
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
         <source src="static/videos/overview_sdp.mp4"
         type="video/mp4">
       </video>
@@ -179,14 +170,14 @@
       <source src="static/videos/overview_sdp.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="caption">Caption for First Video</div>
+    <div class="caption">Multitask evaluation SDP on MimicGen.</div>
   </div>
   <div class="video-box">
     <video poster="" id="tree" autoplay controls muted loop >
       <source src="static/videos/Sparsity of SDP.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="caption">Caption for Second Video</div>
+    <div class="caption">Sparsity of our SDP. During the inference, part of experts are activated.</div>
   </div>
 </div>
 </body>
@@ -252,7 +243,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        The failure case for the baseline model due to the lack of sparsity.
+        Our SDP surpasses the baseline in real-robot experiments. The baseline struggles to capture sparse and multimodal action sequence distributions.
       </h2>
     </div>
   </div>
@@ -269,7 +260,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Novel experiments: we test the reusability of the SDP, highlighting its ability to transfer to new tasks while retaining accumulated old skills. 
+        Task Transfer: We evaluate the reusability of the SDP, emphasizing its capability to leverage previously acquired experts and to facilitate the learning of new skills by composing experts. Our SDP enables rapid task transfer through very lightweight router training.
       </h2>
     </div>
   </div>
