[yixiao] refine web.

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://anonymous.4open.science/r/SDP-14DC" target="_blank"
+                    <a href="" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
-                  </a>
+                    <span>Code(coming soon)</span>
+                  </a >
                 </span>
 
                 <!-- ArXiv abstract Link -->
