--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
              <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
                <span class="author-block">
-                <a href="" target="_blank">Anonymous Authors</a><sup>*</sup>,</span>
+                <a href="" target="_blank">Anonymous Authors</a><sup>*</sup></span>
                 <!--<span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block">
@@ -233,8 +233,13 @@
 </section>
 <!-- End teaser video -->
 
+div.center {
+
+text-align: center;
+
+}
 <!--  Teaser video-->
-<section class="hero teaser">
+<section class="center">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
