--- a/index.html
+++ b/index.html
@@ -233,13 +233,9 @@
 </section>
 <!-- End teaser video -->
 
-div.center {
 
-text-align: center;
-
-}
 <!--  Teaser video-->
-<section class="center">
+<section class="video-container">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
