--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
 
 <!--  Teaser video-->
 <section class="video-container">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
+  <div class="video-container">
+    <div class="video-container">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="static/videos/collapse.mp4"
