--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 <!--  Teaser video-->
 <section class="video-container">
-  <div class="video-container">
+  <div class="container is-max-desktop">
     <div class="video-container">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
