--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 
 <!--  Teaser video-->
-<section class="video-container">
+<section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="video-container">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
