[yixiao] refine the web

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <source src="static/videos/overview_sdp.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="caption"><b>Multitask - Simulation</b>.  Our <b>Sparse Diffusion Policy</b> (SDP) performs well across eight tasks.</div>
+    <div class="caption"><b>Multitask - Simulation</b>.</div>
   </div>
   <div class="video-box">
     <video class = "fixed_video_wider" poster="" id="tree" autoplay controls muted loop >
@@ -214,7 +214,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <img src="static/images/teaser.png" alt="Description of image" style="width: 100%; height: auto;">
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
         Overview of Sparse Diffusion Policy (SDP). 1) Multitask Learning: SDP can simultaneously acquire experts from different demonstration datasets, activate task-specific experts to complish diverse robot tasks. 2) Continual Learning: SDP can continuously learn new tasks by adding only a few new experts without catastrophic forgetting by retaining the old experts and routers. 3) Task Transfer: SDP can freeze the parameter-rich experts and rapidly transfer to new tasks by only tuning lightweight routers for expert selection. Furthermore, SDP can acquire new skills based on the previously learned knowledge.
       </h2>
     </div>
