[yixiao] refine the web.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <source src="static/videos/multitask-realrobot.mp4"
         type="video/mp4">
       </video>
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
         <b>Multitask - FANUC Robotic Arm</b>.
       </h2>
     </div>
@@ -262,7 +262,7 @@
         <source src="static/videos/collapse.mp4"
         type="video/mp4">
       </video>
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
         <b>Multitask - Comparison with TCD</b>. Our SDP surpasses the baseline, Task-Conditioned Diffusion (TCD), in real-robot experiments. The baseline struggles to capture sparse and multimodal action sequence distributions.
       </h2>
     </div>
@@ -298,7 +298,7 @@
         <source src="static/videos/novel_refine.mp4"
         type="video/mp4">
       </video>
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
         <b>Task Transfer</b>. 
       </h2>
     </div>
