--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Real-robot experiment</h2>
+        <h2 class="title is-3">Real-Robot Tasks</h2>
       </div>
     </div>
   </div>
