--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
              <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
                <span class="author-block">
-                <a href="" target="_blank">Anonymous Authors</a><sup>*</sup></span>
+                <a href="https://yixiaowang7.github.io" target="_blank">Yixiao Wang</a><sup>1</sup><sup>*</sup><sup>&dagger;</sup></span>
+                <a href="" target="_blank">Yifei Zhang</a><sup>1</sup><sup>*</sup></span>
+                <a href="" target="_blank">Mingxiao Huo</a><sup>2</sup><sup>*</sup><sup>&dagger;</sup></span>
+                <a href="" target="_blank">Ran Tian</a><sup>1</sup></span>
+                <a href="" target="_blank">Xiang Zhang</a><sup>1</sup></span>
+                <a href="" target="_blank">Yichen Xie</a><sup>1</sup></span>
+                <a href="" target="_blank">Chenfeng Xu</a><sup>1</sup></span>
+                <a href="" target="_blank">Pengliang Ji</a><sup>2</sup></span>
+                <a href="" target="_blank">Wei Zhan</a><sup>1</sup></span>
+                <a href="" target="_blank">Mingyu Ding</a><sup>1</sup><sup>&ddagger;</sup></span>
+                <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span>
                 <!--<span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
                   <span class="author-block">
