--- a/index.html
+++ b/index.html
@@ -57,15 +57,25 @@
               <!-- Paper authors -->
                <span class="author-block">
                 <a href="https://yixiaowang7.github.io" target="_blank">Yixiao Wang</a><sup>1</sup><sup>*</sup><sup>&dagger;</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Yifei Zhang</a><sup>1</sup><sup>*</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Mingxiao Huo</a><sup>2</sup><sup>*</sup><sup>&dagger;</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Ran Tian</a><sup>1</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Xiang Zhang</a><sup>1</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Yichen Xie</a><sup>1</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Chenfeng Xu</a><sup>1</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Pengliang Ji</a><sup>2</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Wei Zhan</a><sup>1</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Mingyu Ding</a><sup>1</sup><sup>&ddagger;</sup></span>
+                <span class="author-block">
                 <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span>
                 <!--<span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
@@ -74,9 +84,9 @@
                   </span>
                   </div>
  -->
-<!--                   <div class="is-size-5 publication-authors">
+<!--                   <div class="is-size-5 publication-authors">  -->
                     <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>-->
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div> 
 
                   <!-- <div class="column has-text-centered">
