--- a/index.html
+++ b/index.html
@@ -77,17 +77,14 @@
                 <a href="" target="_blank">Mingyu Ding</a><sup>1</sup><sup>&ddagger;</sup></span>
                 <span class="author-block">
                 <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span>
-                <!--<span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
-                  </div>
- -->
-<!--                   <div class="is-size-5 publication-authors">  -->
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
+                </div>
+                <div class="is-size-5 publication-authors">
+                    <span class="author-block"><sup>1</sup>University of California, Berkeley</span>
+                    <span class="author-block"><sup>2</sup>Carnegie Mellon University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div> 
+                    <span class="eql-cntrb"><small><br><sup>&dagger;</sup>Indicates Project Lead</small></span>
+                    <span class="eql-cntrb"><small><br><sup>&ddagger;</sup>Indicates Corresponding Author</small></span>
+                </div> 
 
                   <!-- <div class="column has-text-centered">
                     <div class="publication-links">
